# hoch_agent_swarm

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.screenshot  Dockerfile.tools  Dockerfile.worker  FOUNDER_RATIFICATION.md  Family_Brief_July_16.md  HELM_PROMPT_PLAYBOOK.md  HOCH_STATUS.md  LICENSE  README.md  REVISION  SECURITY.md  com.hoch.agent.swarm.runtime.plist  cybersecurity_diagrams.db  docker-compose.24x7.yml  docker-compose.yml  has-live-brain.html  helm-security.html  helm.py  hoch-build-live.html  hoch-command.html  hoch-moonshot  hoch-neuro.html  ingest_public_feed.py  initialize_diagram_db.py  inject_blockers.py  lmstudio_models.json  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  (+7 more)
.githooks/: pre-commit
.github/: dependabot.yml
.grok/: config.toml
_quarantine/: index.lock.stale_1784251711  index.lock.stale_1784251748298907818  index.lock.stale_1784251789309376379  next-index-13.lock.c_1784251970643924007  next-index-3.lock.stale_1784251711  next-index-4.lock.stale_1784251748298907818
audits/: AUDIT_01_data_integrity.md  AUDIT_02_realtime_vs_sim.md  AUDIT_03_integrations.md  AUDIT_04_pii_name.md
backend/: .fuse_hidden0000000b00000001  .fuse_hidden0000000c00000001  .fuse_hidden0000000d00000005  .fuse_hidden0000002600000002  .fuse_hidden0000002f00000003  .fuse_hidden0000003000000004  .fuse_hidden000000da00000002  .fuse_hidden000000e100000003  .fuse_hidden000000e200000004  .fuse_hidden000000f200000003  .fuse_hidden0000011a00000002  .fuse_hidden0000012100000003  .fuse_hidden0000012200000004  .fuse_hidden0000043000000005  .fuse_hidden0000047100000005  .fuse_hidden0000136100000006  .fuse_hidden0000136200000007  .fuse_hidden0000136300000008  agent_executor.py  agent_invocation.py  agent_model_policy.py  agent_router.py  agent_runner.py  agent_safety_governor.py  agent_task_classifier.py  approval_gate.py  ato_manager.py  binding_readiness_manager.py  brain_orchestrator.py  capability_router.py  cluster_manager.py  conmon_manager.py  control_plane_manager.py  crewai_ingestion_bridge.py  cybergov_manager.py  deployment_manager.py  detection_events.py  device_discovery.py  device_swarm_server.py  discovery_daemon.py  (+60 more)
config/: agent_registry.yaml  agent_scoreboard_policy.yaml  artifact_policy.yaml  asset_trust_registry.json  autonomy_policy.yaml  canonical_goal_contract.json  claim_evidence_policy.yaml  cluster_worker_profiles.json  coding_agent_policy.yaml  completion_gates.yaml  compute_assets.example.json  compute_assets.json  compute_utilization_gap_policy.yaml  confidence_policy.yaml  daily_brief_policy.yaml  delivery_targets.yaml  domain_coverage_policy.yaml  domain_owner_policy.yaml  epic_fury_test_matrix.json  escalation.yaml  escalation_policy.yaml  fake_completion_terms.yaml  final_verifier_policy.yaml  founder_allowed_signers  gitleaks.toml  goal_completion_contract.json  goal_requirements.json  has_operating_doctrine.yaml  helm_founder_status_contract.json  hoch_ai_model_mesh.json  hoch_northstar_controls.json  hoch_pert_workstreams.json  identity_registry.yaml  known_assets.json  known_warning_baseline.json  live_runtime_feature_map.json  local_print_policy.yaml  michael_doctrine.yaml  michael_doctrine_seed.yaml  michael_intent_patterns.yaml  (+60 more)
control/: authority_policy.json  blocked_actions.json  phase_registry.json  phase_state.json
coordination/: HELM_COUNCIL_ALIGNMENT_PACKET_v1.json  OPERATING_INSTRUCTION.md  _resolved_doorstep_archive.json  coordination_bus.json  coordination_bus.json.pre-cleanup.bak  council_roster.json
data/: agent_execution_ledger.jsonl  demo_config.json  production_tracker.json  tv_epg.xml  tv_playlist.m3u
deploy/: com.hoch.goal.runtime.loop.plist  com.hoch.helm-conmon.plist  helm.env.template
diagrams/: swarm_topology.mmd
docs/: AGENTS.md  BRAIN2.md  BRAIN3.md  CHANGE_CONTROL.md  DOCKER1.md  EPIC_FURY_SUBMISSION_CHECKLIST.md  FOUNDER_ACTION_PACK_2026-07-15.md  HELM_JSPACE_ARCHITECTURE.md  HELM_NIST_CONTROL_COVERAGE.md  HELM_READAUTH_ENABLEMENT.md  HELM_ZERO_TRUST_CUTOVER.md  PROMPTBRAIN1.md  PROMPTQA1.md  SESSION_HANDOFF.md  SOURCE_TREE_COORDINATION_GUARD.md  TV5_HLS_PROXY.md  VOCABULARY.md  antigravity_integration_doctrine.md  crewai_version_assessment.md  dashboard.html  mcp_stub.md  safe_file.txt  safe_local_file.txt
dummy_mcp/: pyproject.toml
dummy_mcp/src/mcp/: __init__.py
evals/: README.md
frontend/: app.js  has_brain_console.html  has_brain_moonshot.html  has_goal_command_widget.html  helm-night-watch.html  index.html  package-lock.json  package.json  runtime_truth_status.js  styles.css  tailwind.css  visual_adapters.js  visual_adapters.test-fixtures.json  visual_dashboard_preview.js  vite.config.ts
frontend_live/: architecture.html  audit_theater.html  brain.html  build_theater.html  command.html  command_center.html  console.html  control_plane.html  council.html  executive.html  factories.html  founder.html  haf_console.html  helm.html  helm_auth.js  hub.html  jspace_console.html  live_run.html  logic_matrix.html  mission.html  nist.html  ops_center.html  overview.html  pert.html  pert_live.html  roadmap.html  theater.html  voice.html  voice_panel.js
has_live_project_tracker/: README.md  index.html  index_backup.html  server.js  server_backup.js  tracker-daemon.plist  tracker-mirror.html
hsf/: story-engine.js  story-studio-v2.html
k8s/: deployment-secure.yaml  network-policies.yaml  pod-security-policies.yaml
kimi/: MOVED.md  README.md  SAFE_HANDOFF.md
knowledge/: user_preference.txt
schemas/: qa_team_dossier.schema.json
scratch/: analyze_v4.py  extract_v4_from_transcript.py  inspect_transcript.py  temp.txt  verify_live_run.py
scripts/: activate_always_current.sh  actor_f2_classify.py  actor_f2_collect.sh  actor_f3_custody.py  add_key.sh  ag_execution_daemon.py  ag_execution_failure_injector.py  ag_execution_lease_manager.py  ag_execution_runner.py  ag_execution_supervision_test.py  ag_operator_hold.py  ag_usage_budget_check.sh  anti_fake_gate.sh  audit_session_e2e.py  (+425 more)
(+5626 files in other folders)
