[project]
name = "hoch_agent_swarm"
version = "0.1.0"
description = "hoch_agent_swarm using crewAI"
authors = [{ name = "Michael Hoch", email = "michaelhoch@Michaels-MacBook-Pro.local" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.0,<2",
    "mcp",
    "flask>=3.0",
    "flask-cors>=4.0",
]

[project.scripts]
hoch_agent_swarm = "hoch_agent_swarm.main:run"
run_crew = "hoch_agent_swarm.main:run"
train = "hoch_agent_swarm.main:train"
replay = "hoch_agent_swarm.main:replay"
test = "hoch_agent_swarm.main:test"
run_with_trigger = "hoch_agent_swarm.main:run_with_trigger"
trial_preflight = "hoch_agent_swarm.trial_preflight:main"
compare_reports = "hoch_agent_swarm.compare_reports:main"
quality_gate = "hoch_agent_swarm.quality_gate:main"
package_release_candidate = "hoch_agent_swarm.release_candidate:main"
inspect_release_candidate = "hoch_agent_swarm.rc_inspector:main"
swarm_ui = "hoch_agent_swarm.ui_server:main"
operator_launch = "hoch_agent_swarm.operator_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
mcp = { path = "./dummy_mcp" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # CrewAI 1.15.0 internal deprecation warnings — not actionable from this project
    "ignore::DeprecationWarning:crewai.*",
]
