[project]
name = "hoch_agent_swarm"
version = "0.1.0"
description = "hoch_agent_swarm using crewAI"
authors = [{ name = "Michael Hoch", email = "michaelhoch@Michaels-MacBook-Pro.local" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.0,<2",
    "mcp",
    "flask>=3.0.4",
    "flask-cors>=4.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "zeroconf>=0.150.0",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "python-pptx>=1.0.2",
    "reportlab>=5.0.0",
    "markdown>=3.10.2",
    "stripe>=15.3.0",
]

[project.scripts]
hoch_agent_swarm = "hoch_agent_swarm.main:run"
run_crew = "hoch_agent_swarm.main:run"
train = "hoch_agent_swarm.main:train"
replay = "hoch_agent_swarm.main:replay"
test = "hoch_agent_swarm.main:test"
run_with_trigger = "hoch_agent_swarm.main:run_with_trigger"
trial_preflight = "hoch_agent_swarm.trial_preflight:main"
compare_reports = "hoch_agent_swarm.compare_reports:main"
quality_gate = "hoch_agent_swarm.quality_gate:main"
package_release_candidate = "hoch_agent_swarm.release_candidate:main"
inspect_release_candidate = "hoch_agent_swarm.rc_inspector:main"
swarm_ui = "hoch_agent_swarm.ui_server:main"
operator_launch = "hoch_agent_swarm.operator_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
mcp = { path = "./dummy_mcp" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    # --- free audit stack (scripts/audit_stack.sh) ---
    "ruff>=0.6",          # fast correctness/lint
    "mypy>=1.11",         # static type checking (report-only)
    "bandit>=1.7",        # python security SAST
    "pip-audit>=2.7",     # dependency CVE audit
    "hypothesis>=6.100",  # property/fuzz testing
    "mutmut>=2.5",        # mutation testing — proves the tests actually bite
    "pytest-cov>=5.0",    # coverage
]
# trivy (container/IaC scan) is a standalone binary: `brew install trivy` or apt. Not a pip dep.

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # CrewAI 1.15.0 internal deprecation warnings — not actionable from this project
    "ignore::DeprecationWarning:crewai.*",
]
