[project]
name = "hoch_agent_swarm"
version = "0.1.0"
description = "hoch_agent_swarm using crewAI"
authors = [{ name = "Michael Hoch", email = "michaelhoch@Michaels-MacBook-Pro.local" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    # crewai[tools] moved to the optional 'legacy-crewai-factory' extra (council-authorized
    # dependency-surface reduction, 2026-07-19): zero backend/ imports, SI env reports crewai
    # not installed, and its transitive graph carried both remaining A3 package risks
    # (json-repair GHSA-xf7x-x43h-rpqh via crewai's <0.26 pin; chromadb PYSEC-2026-311).
    # Activation runbook: docs/helm/LEGACY_CREWAI_FACTORY_RUNBOOK.md
    "mcp",
    "flask>=3.0.4",
    "flask-cors>=4.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "zeroconf>=0.150.0",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "python-pptx>=1.0.2",
    "reportlab>=5.0.0",
    "markdown>=3.10.2",
    "stripe>=15.3.0",
    # A3 CVE remediation 2026-07-19 (coordination/evidence/sbom_cve_20260719/): pillow is
    # used first-party (scripts/branding, visual review tools) and 12.2.0 carries 8 PYSECs.
    "pillow>=12.3.0",
    # T1-F1 fix (2026-07-19 runtime confirmation finding): PyJWT was satisfied transitively by
    # the crewai graph and silently dropped by the optionalization — but asc_client.py (the ASC
    # founder gate) requires it first-party for ES256 JWTs. Declared explicitly.
    "PyJWT[crypto]>=2.8",
    # T1-F1 systematic transitive-drop scan (28 first-party external imports vs default lock):
    # jsonschema (helm_live_api routes — proven by voice/mission route test failures) and
    # python-docx (first-party doc tooling) also rode the crewai graph. anthropic/openai SDKs
    # are INTENTIONALLY not declared: guarded lazy paths only; absence is fail-closed per A4
    # egress policy (CLI/local lanes only).
    "jsonschema>=4.21",
    "python-docx>=1.1",
]

[project.optional-dependencies]
legacy-crewai-factory = [
    "crewai[tools]>=1.15.0,<2",
]

[project.scripts]
hoch_agent_swarm = "hoch_agent_swarm.main:run"
run_crew = "hoch_agent_swarm.main:run"
train = "hoch_agent_swarm.main:train"
replay = "hoch_agent_swarm.main:replay"
test = "hoch_agent_swarm.main:test"
run_with_trigger = "hoch_agent_swarm.main:run_with_trigger"
trial_preflight = "hoch_agent_swarm.trial_preflight:main"
compare_reports = "hoch_agent_swarm.compare_reports:main"
quality_gate = "hoch_agent_swarm.quality_gate:main"
package_release_candidate = "hoch_agent_swarm.release_candidate:main"
inspect_release_candidate = "hoch_agent_swarm.rc_inspector:main"
swarm_ui = "hoch_agent_swarm.ui_server:main"
operator_launch = "hoch_agent_swarm.operator_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
mcp = { path = "./dummy_mcp" }

# A3 CVE remediation notes (2026-07-19, coordination/evidence/sbom_cve_20260719/):
# * json-repair 0.25.3 carries GHSA-xf7x-x43h-rpqh (fix 0.60.1) but is transitively pinned by
#   crewai to >=0.25.2,<0.26 — constraining to 0.60.1 makes resolution UNSAT (verified with
#   `uv lock`). Remediation is BLOCKED_UPSTREAM. Options (founder/security decision):
#   (a) [tool.uv] override-dependencies = ["json-repair>=0.60.1"] — forces past crewai's pin,
#       UNTESTED against crewai runtime paths; (b) upgrade crewai when it lifts the pin;
#   (c) accept: json_repair has zero first-party imports and the SI venv reports crewai not
#       installed, so reachability in the effective runtime is unconfirmed (venv audit pending).
# * mcp: the "mcp" package here is the LOCAL dummy_mcp stub (path source above) — the PyPI mcp
#   CVEs (CVE-2026-52869/52870/59950) do NOT apply to installs from this lock. If the dummy
#   source is ever removed, the registry mcp MUST be constrained to >=1.28.1 at that time.

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    # --- free audit stack (scripts/audit_stack.sh) ---
    "ruff>=0.6",          # fast correctness/lint
    "mypy>=1.11",         # static type checking (report-only)
    "bandit>=1.7",        # python security SAST
    "pip-audit>=2.7",     # dependency CVE audit
    "hypothesis>=6.100",  # property/fuzz testing
    "mutmut>=2.5",        # mutation testing — proves the tests actually bite
    "pytest-cov>=5.0",    # coverage
]
# trivy (container/IaC scan) is a standalone binary: `brew install trivy` or apt. Not a pip dep.

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # CrewAI 1.15.0 internal deprecation warnings — not actionable from this project
    "ignore::DeprecationWarning:crewai.*",
]
